# tauri-app-test

./: .gitignore  README.md  UPDATE_LOG.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: release.mjs  updatelog.mjs  updater.mjs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Greet.vue
src/windows/: index.ts
webdriver/selenium/: package.json  pnpm-lock.yaml
webdriver/selenium/test/: test.js
